--- a/Lab-3 -  Place & Route/report/content/abbreviations.tex
+++ b/Lab-3 -  Place & Route/report/content/abbreviations.tex
@@ -12,6 +12,7 @@
 	\acro{hdl}[HDL]{Hardware Description Language}
 	
 	\acro{ic}[IC]{Integrated Circuit}
+	\acro{io}[IO]{Input Output}
 		
 	\acro{rtl}[RTL]{Register-Transfer Level}
 	\acro{rx}[RX]{Receiver}
