--- a/Lab-3 -  Place & Route/report/content/abbreviations.tex
+++ b/Lab-3 -  Place & Route/report/content/abbreviations.tex
@@ -4,6 +4,9 @@
 	\acro{asic}[ASIC]{Application Specific Integrated Circuit}
 	\acro{atpg}[ATPG]{Automatic Test Pattern Generation}
 	
+	\acro{cts}[CTS]{Clock Tree Synthesis}
+	
+	
 	\acro{def}[DEF]{Design Exchange Format}
 	\acro{dft}[DFT]{Design For Testability}
 		
