--- a/Lab-3 -  Place & Route/report/content/abbreviations.tex
+++ b/Lab-3 -  Place & Route/report/content/abbreviations.tex
@@ -16,6 +16,9 @@
 	
 	\acro{ic}[IC]{Integrated Circuit}
 	\acro{io}[IO]{Input Output}
+	
+	
+	\acro{ocv}[OCV]{On-Chip Variation}
 		
 	\acro{rtl}[RTL]{Register-Transfer Level}
 	\acro{rx}[RX]{Receiver}
