renamed the reports

--- a/Lab-3 -  Place & Route/report/Lab3_EN4603.tex
+++ b/Lab-3 -  Place & Route/report/Lab3_EN4603.tex
@@ -334,6 +334,8 @@ This section demonstrates the steps carried out at the `Step 3' in the Laborator
 	
 \end{enumerate} 
 
+\section{Exercise}
+
 \pagebreak
 %\vfill
 %\hrule
